src/tests/fixtures/extend_type/nonAliasFirstArgumentType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  // No fields
}

/** @GQLField */
export function greeting(query: { name: string }): string {
  return "Hello world!";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/nonAliasFirstArgumentType.invalid.ts:7:33 - error: Expected first argument of a `@GQLField` function to be typed as a `@GQLType` type.

7 export function greeting(query: { name: string }): string {
                                  ~~~~~~~~~~~~~~~~
